Fix image getting strected on mobile

--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,7 @@ footer {
   margin-inline: 12px;
 }
 .carousel-card img {
+  align-self: center;
   width: 100%;
   height: 100%;
   border-top-left-radius: 8px;
